--- a/README.Rmd
+++ b/README.Rmd
@@ -58,7 +58,10 @@ list_github_files <- function(repo, dir = NULL, ext = NULL) {
 :ledger: Slide [1](https://deivisonsouza.github.io/R-Introduction/Slides/01-Introduction.html),
 [2](https://deivisonsouza.github.io/R-Introduction/Slides/02-Objects.html)
 
-<img src="Slides/fig/ufpa.png" width="100" align="middle" class="center"> <img src="Slides/fig/floresta.png" width="100" align="middle" class="center">
+<div>
+  <img src="Slides/fig/ufpa.png" width="100" align="middle" class="center">
+  <img src="Slides/fig/floresta.png" width="100" align="middle" class="center">
+<div>
 
 # Descrição
 
