--- a/README.Rmd
+++ b/README.Rmd
@@ -65,7 +65,7 @@ list_github_files <- function(repo, dir = NULL, ext = NULL) {
 
 # Descrição
 
-O curso de **Linguagem de programação R: uma introdução para iniciantes** constitui uma atividade complementar no âmbito do **Ensino Remoto Emergencial (ERE)** na [Universidade Federal do Pará (UFPA)](https://portal.ufpa.br/index.php), conforme dispõe a [Resolução  n. 5.294, de 21 de agosto de 2020](http://sege.ufpa.br/boletim_interno/downloads/resolucoes/consepe/2020/Resolucao_5294_2020_CONSEPE.pdf). Este curso foi elaborado para atender aos discentes regularmente matriculados no curso de graduação em Engenharia Florestal da UFPA. O objetivo do curso é aproximar os discentes da linguagem de programação R, estimulando seu uso para análise de dados científicos, no âmbito das Ciências Florestais. Este repositório guarda os códigos R, arquivos .Rmd dos slides, figuras (e outros) utilizados neste curso.
+Este repositório guarda os códigos R, arquivos .Rmd dos slides, figuras (e outros) utilizados no curso **Linguagem de programação R: uma introdução para iniciantes**. A linguagem tem sido amplamente usada principalmente por estatísticos, pesquisadores e cientístas de dados, para análise de dados e aplicação de métodos. Particularmente, este curso constitui uma atividade complementar no âmbito do **Ensino Remoto Emergencial (ERE)** na [Universidade Federal do Pará (UFPA)](https://portal.ufpa.br/index.php), conforme dispõe a [Resolução  n. 5.294, de 21 de agosto de 2020](http://sege.ufpa.br/boletim_interno/downloads/resolucoes/consepe/2020/Resolucao_5294_2020_CONSEPE.pdf). Este curso foi elaborado para atender aos discentes regularmente matriculados no curso de graduação em Engenharia Florestal da UFPA, visando aproximá-los da linguagem de programação R. Sempre que possível, exemplos dentro do contexto das Ciências Florestais são usados, objetivando otimizar o processo de ensino-aprendizagem.
 
 # Programação do curso
 
