--- a/Slides/01-Introduction.Rmd
+++ b/Slides/01-Introduction.Rmd
@@ -540,8 +540,20 @@ class: center, inverse, middle
 </table>
 
 ---
-[01-IniciandoNoR](https://deivisonsouza.github.io/R-Introduction/R-scripts/01-IniciandoNoR.R)
+class: center, inverse, middle
+background-image: url(fig/imgC.jpg)
+background-size: cover
 
+# .left[.black[OPERADORES NO R]]
+
+.left[.black[
+Acesse o R-script:]
+
+[01-Starting-with-R](https://deivisonsouza.github.io/R-Introduction/R-scripts/01-Starting-with-R.R)]
+
+<div style="font-size:7pt">
+.left[.footnote[.black[Imagem de] <a href="https://pixabay.com/pt/users/Erik_Karits-15012370/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4808774">Erik Karits</a> .black[por] <a href="https://pixabay.com/pt/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4808774">Pixabay</a>️]]
+</div>
 
 ---
 name: arit
